# lv_xwatch

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/lcd/: CMakeLists.txt  component.mk  decode_image.c  decode_image.h  font.h  gui.c  gui.h  gui_types.h  lcd.c  lcd.h
components/lv_xwatch/: CMakeLists.txt  component.mk  lv_xwatch.c  lv_xwatch.h
components/lv_xwatch/assets/font/: font.h  font_asc_chiller_72.c  font_ch_xinwei_14.c
components/lv_xwatch/assets/image/: img_main_desktop_star.c  img_menu_logo_calendar.c  img_menu_logo_clock.c  img_menu_logo_file.c  img_menu_logo_music.c  img_menu_logo_setting.c  img_menu_logo_weather.c
components/lv_xwatch/pages/: lv_page.c  lv_page.h  lv_page_about.c  lv_page_bluetooth.c  lv_page_calendar.c  lv_page_clock.c  lv_page_files.c  lv_page_main.c  lv_page_menu.c  lv_page_music.c  lv_page_settings.c  lv_page_volume.c  lv_page_weather.c  lv_page_wifi.c  lv_pages_include.h
components/lvgl/: component.mk
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/extra/: extra.mk
components/lvgl/src/misc/: lv_mem.c
components/lvgl_esp32_drivers/: lvgl_helpers.h
main/: CMakeLists.txt  app_console.c  app_console.h  app_net.c  app_net.h  main.c
